# ECL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  create_env.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  experiments.md  getting_started.md  model_guide.md  theory.md
docs/report/: CHANGELOG.md  aliasctr.sty  caption.sty  caption3.sty  cleveref.sty  cs.cls  hyphenat.sty  ifoddpage.sty  main.tex  makecell.sty  math_commands.tex  multirow.sty  nicematrix.sty  parseargs.sty  subcaption.sty  tcolorbox.sty  thm-amsthm.sty  thm-autoref.sty  thm-kv.sty  thm-listof.sty  thm-patch.sty  thm-restate.sty  thmtools.sty  titlesec.sty  trimspaces.sty  unique.sty  xpatch.sty
docs/tutorials/: model_comparison.py  quickstart.py
notebooks/: 01_quickstart.ipynb  02_perturbation_types.ipynb  03_model_comparison.ipynb  04_gniah_protocol.ipynb
outputs/: tab01_model_taxonomy.csv  tab01_model_taxonomy.tex
scripts/: _config.py  fig01_influence_profiles_promoter.py  fig02_influence_profiles_enhancer.py  fig03_cumulative_influence.py  fig04_directional_ecl.py  fig05_perturbation_scatter.py  fig06_trained_vs_random.py  fig07_locus_class_violin.py  fig08_ecl_vs_gene_length.py  fig09_model_comparison_paired.py  fig10_biological_validation.py  fig11_interaction_heatmap.py  fig12_gniah_sensitivity.py  figA1_cds_analysis.py  figA2_ecd_analysis.py  run_all.py  run_real_experiments.py  tab01_model_taxonomy.py  tab02_ecl_estimates.py  tab03_utilization.py  tab04_perturbation_sensitivity.py  tab05_multiscale_block.py  tab06_pairwise_comparison.py  tab07_biological_validation.py  tabA1_hyperparameter_sensitivity.py
src/ecl/: __init__.py  cds.py  ecl.py  gniah.py  (+5 more)
src/ecl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_cds.py  test_ecl.py  test_estimation.py  test_gniah.py  test_influence.py  test_metrics.py  test_models.py  test_perturbations.py
(+49 files in other folders)
